<resources>
    <string name="app_name">Daily Quote</string>
    <string name="failed_to_load">Failed to load Quote, please try later</string>
    <string name="copied_to_clipbard">Copied to Clip Board</string>
    <string name="test_message">\"Test Message\"</string>
    <string name="refresh">Refresh</string>
    <string name="action">Action</string>
    <string name="daily_quote">Daily Quote</string>
    <string name="be_motivated">Be Inspired and motivated.</string>
    <string name="refresh_option">Show refresh button</string>
    <string name="quotes">Quotes</string>
    <string name="share">Share</string>
    <string name="share_title">Share Daily Quote</string>
    <string name="your_name">Your Name</string>
    <string name="show_refresh">Show Refresh</string>
    <string name="show_refresh_summary">Enable to show refresh button on widget</string>
    <string name="show_quotes">Show Quotes</string>
    <string name="show_quotes_summary">Enable to show quotes in widget</string>
    <string name="settings">Settings</string>
    <string name="add_new">Add new</string>
    <string name="download">Download</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->

    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->

    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="close">Close</string>
    <string name="change_quote">Change Quote</string>
    <string name="more_quotes">More Quotes</string>
    <string name="widget_color">Widget Color</string>
    <string name="save">Save</string>
    <string name="your_quote">Your Quote</string>
    <string name="a">Aa</string>
    <string name="selected">Selected</string>

</resources>