<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewQuote"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textQuote"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/test_message"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textQuoteMaster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-light"
                android:minWidth="100dp"
                android:text="@string/test_message"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="normal" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green_semi_dark"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_quote_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="@+id/fabActions"
        app:layout_constraintEnd_toStartOf="@+id/fabActions"
        app:layout_constraintTop_toTopOf="@+id/fabActions" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/green_semi_dark"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_refresh_light"
        app:layout_constraintBottom_toTopOf="@+id/fabActions"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/change_quote"
        app:layout_constraintBottom_toBottomOf="@+id/fabRefresh"
        app:layout_constraintEnd_toStartOf="@+id/fabRefresh"
        app:layout_constraintTop_toTopOf="@+id/fabRefresh" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/green_semi_dark"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_more_list"
        app:layout_constraintBottom_toTopOf="@+id/fabRefresh"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/more_quotes"
        app:layout_constraintBottom_toBottomOf="@+id/fabMore"
        app:layout_constraintEnd_toStartOf="@+id/fabMore"
        app:layout_constraintTop_toTopOf="@+id/fabMore" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/green_semi_dark"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toTopOf="@+id/fabMore"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="@+id/fabShare"
        app:layout_constraintEnd_toStartOf="@+id/fabShare"
        app:layout_constraintTop_toTopOf="@+id/fabShare" />

</androidx.constraintlayout.widget.ConstraintLayout>